ingress-gihan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gihan-testsimple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gihan-testsimple
  template:
    metadata:
      labels:
        app: gihan-testsimple
    spec:
      containers:
      - name: gihan-testsimple
        image: 504546234530.dkr.ecr.ap-southeast-2.amazonaws.com/buysmartdotcom/test-service:0e249af-20220928_045134
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: gihan-testsimple
spec:
  type: ClusterIP
  ports:
  - port: 8081
  selector:
    app: gihan-testsimple
