nginx-gw-gihan.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-gateway
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /test(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 8081
